# rtc-engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
audio/: CMakeLists.txt
audio/include/rtc/audio/: audio_capture.h  audio_processing.h  audio_stream.h  jitter_buffer.h  opus_codec.h
audio/src/: audio_capture.cpp  audio_placeholder.cpp  audio_processing.cpp  audio_stream.cpp  jitter_buffer.cpp  opus_codec.cpp
core/: CMakeLists.txt
core/include/rtc/: connection_recovery.h  health_monitor.h  ice_agent.h  lock_free_queue.h  metrics_exporter.h  rtcp_packet.h  rtp_pacer.h  rtp_packet.h  stun_client.h  turn_client.h  udp_socket.h
core/src/: connection_recovery.cpp  health_monitor.cpp  ice_agent.cpp  lock_free_queue.cpp  metrics_exporter.cpp  rtcp_packet.cpp  rtp_pacer.cpp  rtp_packet.cpp  stun_client.cpp  turn_client.cpp  udp_socket.cpp
server/: CMakeLists.txt
server/include/rtc/server/: audio_mixer.h  cluster_coordinator.h  conference_bridge.h  room_manager.h  rtp_forwarder.h  sfu_server.h  subscription_manager.h  video_compositor.h
server/src/: audio_mixer.cpp  cluster_coordinator.cpp  conference_bridge.cpp  room_manager.cpp  rtp_forwarder.cpp  server_placeholder.cpp  sfu_server.cpp  subscription_manager.cpp  video_compositor.cpp
video/: CMakeLists.txt
video/include/rtc/video/: bitrate_controller.h  frame_buffer.h  video_capture.h  video_codec.h  video_stream.h
video/src/: bitrate_controller.cpp  frame_buffer.cpp  video_capture.cpp  video_codec.cpp  video_placeholder.cpp  video_stream.cpp
